feature(api): 세션 갱신과 자기소개 관리 기능 추가